import org.springframework.boot.gradle.plugin.SpringBootPlugin

plugins {
    id 'org.springframework.boot' version '3.1.4' apply false
    id 'io.spring.dependency-management' version '1.1.3'
    id 'groovy'
    id 'maven-publish'
    id 'java-library'
    id 'com.github.ben-manes.versions' version '0.48.0'
    id 'se.patrikerdes.use-latest-versions' version '0.2.18'
}

group = 'no.fintlabs'
sourceCompatibility = '17'
targetCompatibility = '17'

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    repositories {
        mavenLocal()
    }
}

repositories {
    mavenLocal()
    maven {
        url "https://repo.fintlabs.no/releases"
    }
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom SpringBootPlugin.BOM_COORDINATES
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'no.fintlabs:fint-core-infra-models:1.1.2'
    implementation 'org.apache.commons:commons-lang3:3.13.0'
    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.99.Final:osx-aarch_64'
    implementation "jakarta.annotation:jakarta.annotation-api:2.1.1"
    implementation "no.fint:fint-model-resource:0.4.1"
    implementation 'org.jetbrains:annotations:24.0.1'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
//    compileOnly "com.sun.xml.ws:jaxws-rt:4.0.1"
//    compileOnly "org.glassfish.jaxb:jaxb-runtime:4.0.3"
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
//    testImplementation "org.glassfish.jaxb:jaxb-runtime:4.0.3"
    testImplementation 'cglib:cglib-nodep:3.3.0'
//    testImplementation "com.sun.xml.ws:jaxws-rt:4.0.1"
    testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
    testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'

    testImplementation 'org.springframework.kafka:spring-kafka-test'
}

test {
    useJUnitPlatform()
}

apply from: 'https://raw.githubusercontent.com/FINTLabs/fint-buildscripts/master/reposilite.ga.gradle'
